--- a/src/output.css
+++ b/src/output.css
@@ -628,3 +628,11 @@ video {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
+
+.font-bold{
+  font-weight: 700;
+}
+
+.underline{
+  text-decoration-line: underline;
+}
