--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,16 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  body {
+    /* background-color: #14161b; */
+  }
+}
+
+.slick-slide > div {
+  margin: 0 10px
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
